WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
172746
[CoordinatedGraphics][REGRESSION] Memory hogging since
r217214
https://bugs.webkit.org/show_bug.cgi?id=172746
Summary
[CoordinatedGraphics][REGRESSION] Memory hogging since r217214
Claudio Saavedra
Reported
2017-05-31 00:31:21 PDT
To reproduce, run: Tools/Scripts/run-webkit-tests --wpe animations/negative-delay.html --iterations=1000 Same with --gtk. Memory usage for WPEWebProcess will go above 1GB very quickly. Reverting that patch makes WPEWebProcess stay at about 35 MB of RAM. Zan proposed the patch in
http://sprunge.us/JBei
but with this patch memory usage increases nonetheless to about 100 MB, so there is still something else not being released. I am not familiar with the coordinated graphics code so this is as far as I can go.
Attachments
Patch
(6.19 KB, patch)
2017-06-01 08:54 PDT
,
Gwang Yoon Hwang
no flags
Details
Formatted Diff
Diff
Patch
(6.67 KB, patch)
2017-06-01 10:40 PDT
,
Gwang Yoon Hwang
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Gwang Yoon Hwang
Comment 1
2017-06-01 08:54:37 PDT
Created
attachment 311705
[details]
Patch
Gwang Yoon Hwang
Comment 2
2017-06-01 10:40:42 PDT
Created
attachment 311723
[details]
Patch
Gwang Yoon Hwang
Comment 3
2017-06-01 10:41:37 PDT
(In reply to Gwang Yoon Hwang from
comment #2
)
> Created
attachment 311723
[details]
> Patch
Fixed small memory leaks also.
Zan Dobersek
Comment 4
2017-06-02 02:18:03 PDT
Comment on
attachment 311723
[details]
Patch Yep, works.
Claudio Saavedra
Comment 5
2017-06-02 02:44:47 PDT
I can't comment as to the patch itself, but I tested it and memory remains under control with it.
WebKit Commit Bot
Comment 6
2017-06-02 02:57:58 PDT
Comment on
attachment 311723
[details]
Patch Clearing flags on attachment: 311723 Committed
r217707
: <
http://trac.webkit.org/changeset/217707
>
WebKit Commit Bot
Comment 7
2017-06-02 02:58:00 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug