Source/WebKit2/Shared/CoordinatedGraphics/CoordinatedGraphicsScene.h
@@ -66,7 +66,7 @@ public:
     virtual ~CoordinatedGraphicsScene();
     void paintToCurrentGLContext(const WebCore::TransformationMatrix&, float, const WebCore::FloatRect&, const WebCore::Color& backgroundColor, bool drawsBackground, const WebCore::FloatPoint&, WebCore::TextureMapper::PaintFlags = 0);
     void detach();
-    void appendUpdate(std::function<void()>&&);
+    void appendUpdate(Function<void()>&&);
 
     WebCore::TextureMapperLayer* findScrollableContentsLayerAt(const WebCore::FloatPoint&);
 
@@ -145,7 +145,7 @@ private:
 #endif
 
     // Render queue can be accessed ony from main thread or updatePaintNode call stack!
-    Vector<std::function<void()>> m_renderQueue;
+    Vector<Function<void()>> m_renderQueue;
     Lock m_renderQueueMutex;
 
     std::unique_ptr<WebCore::TextureMapper> m_textureMapper;
